cambie paddig, font-size y puse borde a libros

--- a/libros.html
+++ b/libros.html
@@ -151,7 +151,7 @@
                             <h5>Herald Welzer</h5>
                         </div>
                     </div>
-                    <div class="libro11">
+                    <div class="sin-foto color-n" > <!-- class="libro11" -->
                         <div> <!-- class="info-libro11" -->
                             <h4>La historia argentina en perspectiva local y regional</h4>
                             <p>Esta obra es como un puzzle, un ancho mapa, una imagen de varias significativas producciones de la historiografía argentina construida desde el perfil de los    estudios regionales y locales. Esta compilación es una composición que muestra la madurez de la perspectiva regional y local en la historiografía argentina que    tiene el fin de reflexionar y cuestionar nuestra producción científica actual.</p>
@@ -202,30 +202,26 @@
                 </section>
                 <section>
                     <h3>Ciencia</h3>
-                    <div>
+                    <div class="sin-foto color-a">
                         <h4>Procesos industriales y uso de productos</h4>
-                        <img src="" alt="">
                         <p>Este estudio sobe el “Aprovechamiento del potencial nacional para la mitigación del cambio climático” tiene como objetivo mostrar a nivel provincial las     emisiones de Gases de Efecto Invernadero.</p>
                         <h5>Fundación Torcuato Di Tella y PwC</h5>
                         <a href="https://www.argentina.gob.ar/sites/default/files/5_-comparativa-guias-ipcc-1996-y-2006-procesos-industriales-y-uso-de-productos.pdf"   target="_blank">Leer aquí</a>
                     </div>
-                    <div>
+                    <div class="sin-foto color-v-o">
                         <h4>Agricultura, ganadería y cambio del uso del suelo y silvicultura</h4>
-                        <img src="" alt="">
                         <p>El objetivo de este informe es la elaboración de los perfiles de emisiones para cada provincia correspondientes al sector Agricultura, Ganadería y Cambio de     Uso del Suelo y Silvicultura, utilizando las Directrices del Grupo Intergubernamental de Expertos sobre el Cambio Climático (IPCC).</p>
                         <h5>AACREA y Fundación Torcuato Di Tella</h5>
                         <a href="https://www.argentina.gob.ar/sites/default/files/1.-fichas-provinciales-agricultura-ganaderia-y-cuss_1.pdf" target="_blank">Leer aquí</a>
                     </div>
-                    <div>
+                    <div class="sin-foto color-v-c">
                         <h4>Residuos</h4>
-                        <img src="" alt="">
                         <p>Se compararon los resultados obtenidos al aplicar la metodología sugerida en las Guías IPCC 2006 con la establecida en las Guías 1996 para el cálculo de las     emisiones de metano, entre otras.</p>
                         <h5>Faculad de Ingeniería - UNICEN</h5>
                         <a href="https://www.argentina.gob.ar/sites/default/files/5_-comparativa-guias-ipcc-1996-y-2006-residuos.pdf" target="_blank">Leer aquí</a>
                     </div>
-                    <div>
+                    <div class="sin-foto color-c">
                         <h4>Energía</h4>
-                        <img src="" alt="">
                         <p>Este informe es un análisis comparativo para el sector Energía entre las Directrices del Grupo Intergubernamental de Expertos sobre el Cambio Climático  (IPCC) para los inventarios nacionales de gases de efecto invernadero, y las Directrices del IPCC para los inventarios nacionales de gases de efecto invernadero.    </p>
                         <h5>Coralie S.R.L.</h5>
                         <h5>BA Energy Solutions</h5>
@@ -311,7 +307,7 @@
                             <h5>Edward Osborne Wilson</h5>
                         </div>
                     </div>
-                    <div class="libro31">
+                    <div class="sin-foto color-g-o" > <!-- class="libro31" -->
                         <div>  <!-- class="info-libro31" -->
                             <h4>La alfabetización ecológica como nueva pedagogía</h4>
                             <p>El objetivo central de este artículo es analizar las bases, la plataforma y los principios de la pedagogía denominada Alfabetización Ecológica, para     referirse a la educación ambiental, desde la Ecología Profunda; y actuar en el aquí y ahora de nuestras complejas relaciones comunitarias con los sistemas  vivientes.</p>
