agregue bordes a libros y complete documentales

--- a/biblioteca.html
+++ b/biblioteca.html
@@ -86,34 +86,34 @@
             <div class="contenedor-carrousel">
                 <div class="carrousel">
                     <div class="libro-carrousel">
-                        <a href="libros.html#la-historia-de-las-cosas"><img width="250px" src="img/libros/libro1.jpeg" alt="La historia de las cosas"></a>
+                        <a href="libros.html#libro1"><img width="250px" src="img/libros/libro1.jpeg" alt="La historia de las cosas"></a>
                     </div>
                     <div class="libro-carrousel">
-                        <a href="libros.html#el-ecologismo-de-los-pobres"><img width="250px" src="img/libros/libro2.jpeg" alt="El ecologismo de los pobres"></a>
+                        <a href="libros.html#libro2"><img width="250px" src="img/libros/libro2.jpeg" alt="El ecologismo de los pobres"></a>
                     </div>
                     <div class="libro-carrousel">
-                        <a href="libros.html#primavera-silenciosa"><img width="250px" src="img/libros/libro3.jpeg" alt="Primavera silenciosa"></a>
+                        <a href="libros.html#libro3"><img width="250px" src="img/libros/libro3.jpeg" alt="Primavera silenciosa"></a>
                     </div>
                     <div class="libro-carrousel">
-                        <a href="libros.html#cambio-climatico-economia-desigualdad"><img width="250px" src="img/libros/libro5.jpeg" alt="Cambio climático, economía y desigualdad"></a>
+                        <a href="libros.html#libro5"><img width="250px" src="img/libros/libro5.jpeg" alt="Cambio climático, economía y desigualdad"></a>
                     </div>
                     <div class="libro-carrousel">
-                        <a href="libros.html#prosperidad-sin-crecimiento"><img width="250px" src="img/libros/libro6.jpeg" alt="Prosperidad sin crecimiento"></a>
+                        <a href="libros.html#libro6"><img width="250px" src="img/libros/libro6.jpeg" alt="Prosperidad sin crecimiento"></a>
                     </div>
                     <div class="libro-carrousel">
-                        <a href="libros.html#economia-rosquilla"><img width="250px" src="img/libros/libro7.jpeg" alt="Economía rosquilla"></a>
+                        <a href="libros.html#libro7"><img width="250px" src="img/libros/libro7.jpeg" alt="Economía rosquilla"></a>
                     </div>
                     <div class="libro-carrousel">
-                        <a href="libros.html#el-valor-de-las-cosas"><img width="250px" src="img/libros/libro8.jpeg" alt="El valor de las cosas"></a>
+                        <a href="libros.html#libro8"><img width="250px" src="img/libros/libro8.jpeg" alt="El valor de las cosas"></a>
                     </div>
                     <div class="libro-carrousel">
-                        <a href="libros.html#La-naturaleza-es-un-campo-de-batalla"><img width="250px" src="img/libros/libro9.jpeg" alt="La naturaleza es un campo de batalla"></a>
+                        <a href="libros.html#libro9"><img width="250px" src="img/libros/libro9.jpeg" alt="La naturaleza es un campo de batalla"></a>
                     </div>
                     <div class="libro-carrousel">
-                        <a href="libros.html#guerras-climaticas"><img width="250px" src="img/libros/libro10.jpeg" alt="Guerras climáticas"></a>
+                        <a href="libros.html#libro10"><img width="250px" src="img/libros/libro10.jpeg" alt="Guerras climáticas"></a>
                     </div>
                     <div class="libro-carrousel">
-                        <a href="libros.html#pueblos-indigenas-en-la-argentina"><img width="250px" src="img/libros/libro12.jpeg" alt="Pueblos indígenas en la Argentina"></a>
+                        <a href="libros.html#libro12"><img width="250px" src="img/libros/libro12.jpeg" alt="Pueblos indígenas en la Argentina"></a>
                     </div>
                     <div class="libro-carrousel">
                         <a href="libros.html#libro13"><img width="250px" src="img/libros/libro13.jpeg" alt="Mala leche"></a>
