--- a/busquedas-laborales.html
+++ b/busquedas-laborales.html
@@ -71,7 +71,7 @@
         <div class="container busquedas">
             <div class="item1 wow animate__animated animate__slideInUp">
                 <h2>Búsquedas</h2>
-                <h2>laborales</h2>
+                <h2>voluntarias</h2>
             </div>
             <div class="item2 wow animate__animated animate__slideInUp">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias quam iure adipisci voluptate sequi nulla illum accusantium, harum ex itaque architecto fugit quos fuga cumque impedit. Eveniet libero voluptatibus recusandae ab odio culpa similique assumenda, quae sunt dignissimos reprehenderit, quidem hic quasi porro cum placeat. A vero ullam soluta debitis!</p>
