--- a/libros.html
+++ b/libros.html
@@ -74,21 +74,21 @@
             <div class="libros">
                 <section>
                     <h3>Pensamiento profundo</h3>
-                    <div id="la-historia-de-las-cosas" class="libro1">
+                    <div id="libro1" class="libro1">
                         <div class="info-libro1">
                             <h4>La historia de las cosas</h4>
                             <p>Tenemos un verdadero problema con las COSAS que nos rodean. ¿De dónde vienen las COSAS que compramos? ¿Adónde van a parar cuando las tiramos? ¿Cuáles son los    costos ecológicos y sociales del crecimiento económico que buscamos permanentemente? ¿Cómo se producen, se distribuyen, se consumen y adónde van nuestras COSAS    cuando las tiramos?</p>
                             <h5>Annie Leonard</h5>
                         </div>
                     </div>
-                    <div id="el-ecologismo-de-los-pobres" class="libro2">
+                    <div id="libro2" class="libro2">
                         <div class="info-libro2">
                             <h4>El ecologismo de los pobres: conflictos ambientales y lenguajes de valoración</h4>
                             <p>Ilustra con ejemplos perfectamente documentados los conflictos ecológicos, o sea los conflictos sobre recursos o servicios ambientales que muestran cómo la  codicia puede más que la racionalidad. El autor denuncia situaciones de injusticia ecológica y divulga conceptos claves como la deuda ecológica o el dumping ecológico.</p>
                             <h5>Joan Martínez Alier</h5>      
                         </div>
                     </div>
-                    <div id="primavera-silenciosa" class="libro3">
+                    <div id="libro3" class="libro3">
                         <div class="info-libro3">
                             <h4>Primavera silenciosa</h4>
                             <p>Advierte sobre los efectos perjudiciales de los pesticidas en el ambiente, especialmente en las aves, y culpa a la industria química de la creciente contaminación.</p>
@@ -106,28 +106,28 @@
                 </section>
                 <section>
                     <h3>Desarrollo y Economía</h3> 
-                    <div id="cambio-climatico-economia-desigualdad" class="libro5">
+                    <div id="libro5" class="libro5">
                         <div class="info-libro5">
                             <h4>Cambio climático, economía y desigualdad</h4>
                             <p>¿Qué relación hay entre el crecimiento económico y el cambio climático? Horacio Fazio desmonta los difundidos argumentos que atribuyen el problema climático     a una supuesta sobrepoblación del planeta mediante una tesis novedosa. </p>
                             <h5>Horacio Fazio</h5>
                         </div>
                     </div>
-                    <div id="prosperidad-sin-crecimiento" class="libro6">
+                    <div id="libro6" class="libro6">
                         <div class="info-libro6">
                             <h4>Prosperidad sin crecimiento: Economía para un planeta finito</h4>
                             <p>Plantea que la prosperidad consiste en nuestra capacidad de ser felices como seres humanos, dentro de los límites ecológicos de un planeta finito. El reto   para nuestra sociedad es crear las condiciones donde se haga posible, siendo esta tarea la más urgente de nuestra época.</p>
                             <h5>Tim Jackson</h5>
                         </div>
                     </div>
-                    <div id="economia-rosquilla" class="libro7">
+                    <div id="libro7" class="libro7">
                         <div class="info-libro7">
                             <h4>Economía rosquilla: 7 maneras de pensar la economía del siglo XXI</h4>
                             <p>La economía no funciona. Ha sido incapaz de predecir, y no digamos de impedir, las crisis financieras que han sacudido los cimientos de nuestras sociedades.     Sus obsoletas teorías han permitido la existencia de un mundo en el que persiste la pobreza extrema mientras la riqueza de los superricos aumenta año tras año.     Y sus puntos ciegos han desembocado en políticas que están degradando el mundo viviente en una escala que amenaza por entero a nuestro futuro.</p>
                             <h5>Kate Raworth</h5>
                         </div>
                     </div>
-                    <div id="el-valor-de-las-cosas" class="libro8">
+                    <div id="libro8" class="libro8">
                         <div class="info-libro8">
                             <h4>El valor de las cosas</h4>
                             <p>¿Quién crea realmente la riqueza? ¿Qué actividades la impulsan? ¿Cuáles se limitan a extraerla? ¿Cuáles la destruyen? Nuestras economías tienden a premiar la    extracción de valor antes que su creación -el proceso productivo que verdaderamente impulsa una economía y una sociedad saludables-, y la diferencia entre ambos   conceptos se ha desdibujado de manera notable.</p>
@@ -137,14 +137,14 @@
                 </section>
                 <section>
                     <h3>Problemáticas Sociales</h3>
-                    <div id="La-naturaleza-es-un-campo-de-batalla" class="libro9">
+                    <div id="libro9" class="libro9">
                         <div class="info-libro9">
                             <h4>La naturaleza es un campo de batalla</h4>
                             <p>En sus políticas ambientales el Estado favorece sistemáticamente a las poblaciones blancas y a las clases medias y superiores, a las que preserva de este    tipo de perjuicios. Son los grupos sociales más pobres los que más van a padecer las consecuencias negativas de las crisis ecológicas si los resultados no son     los esperados.</p>
                             <h5>Razmig Keucheyan</h5>
                         </div>
                     </div>
-                    <div id="guerras-climaticas" class="libro10">
+                    <div id="libro10" class="libro10">
                         <div class="info-libro10">
                             <h4>Guerras climáticas</h4>
                             <p>Los recursos naturales se están agotando por la manera en que los explotamos. El resultado: conflictos violentos opondrán a todos aquellos que pretendan     obtener alimentos de un mismo espacio geográfico, o beber de las mismas fuentes de agua.</p>
@@ -159,7 +159,7 @@
                             <h5>Sandra Fernández</h5>
                         </div>
                     </div>
-                    <div id="pueblos-indigenas-en-la-argentina" class="libro12">
+                    <div id="libro12" class="libro12">
                         <div class="info-libro12">
                             <h4>Pueblos indígenas en la Argentina</h4>
                             <p>Dirigido a quienes quieran aproximarse a la inmensa diversidad étnica y lingüística de la sociedad argentina, para conocerla, reconocerla y valorarla. Aún   hay un profundo desconocimiento sobre sus realidades, negando sus propias diferencias y reproduciendo condiciones de desigualdad. Se presenta a los pueblos   originarios en su diversidad, como sujetos de derecho, tanto individual como colectivo.</p>
