--- a/proyectos.html
+++ b/proyectos.html
@@ -80,40 +80,57 @@
     </main> 
     <article id="etiquetado">
         <div class="container">
-            <div class="img"><img class="proyectos" src="https://via.placeholder.com/1000x425" alt="Manifestación"></div>
-            <h3>Etiquetado frontal:</h3>
-            <p>Utilizamos diversas estrategias para que el proyecto de Promoción de la Alimentación Saludable sea ley:</p>
-            <ol>
-                <li>Trabajamos en coalición con diferentes organizaciones como Fundeps, FIC, Consumidores Argentinos, Museo del Hambre, FAGRAN, Sanar nutrición. Logramos llegar a  audiencias más amplias en las redes sociales y en el contacto con nuestros representantes.</li>
-                <li>Activá el Congreso: en conjunto con Activa el Congreso y La Vuelta al Mundo trabajamos en la plataforma digital “Activá el Congreso” exigiendo a nuestros   representantes del Congreso de la Nación que sancionen la Ley de Etiquetado Frontal. Pueden visitarla en activaelcongreso.org</li>
-                <li>Azúcar Challenge: Fue una acción viral en Instagram, en conjunto con Somos Miles, para que éste tama llegara a más personas. El desafío consistía en tratar en  10 segundos comer 10 cucharadas de azúcar, por supuesto que en todo momento supimos que eso era imposible, y que en ese tiempo, como mucho se podían ingerir 2   cucharadas de azúcar. Gracias a este desafío más personas se enteraron de la situación e incluso, participaron y se involucraron en el reclamo a través de Activá el  Congreso.</li>
-                <li>Convocamos a twittazos para que #EtiquetadoClaroYA sea tendencia.</li>
-                <li>Generamos contenido audiovisual para informar y desmitificar argumentos erróneos sobre el proyecto en las redes sociales. Convocamos a personas mediáticas,     actores y actrices e influencers para participar de los mismos.</li>
-                <li>Realizamos una acción en la vía pública en la que etiquetamos publicidades, lo que se utilizó como material para armar un video.</li>
-                <li>Participamos de la tercera reunión informativa de la Cámara de Diputados del día 23 de febrero de 2021 en la que expusimos acerca de la importancia de que la   ley de dictamine sin modificaciones.</li>
-                <li>Hablamos con diputados y diputadas de los distintos bloques de la importancia de que salga esta ley y sin modificaciones, y les pedimos que se comprometan a que    así sea.</li>
-            </ol>
+            <div class="titulos-proyectos" id="titulo-etiquetado">
+                <h3>Etiquetado frontal</h3>
+                <img src="img/down-arrow.png" alt="Flecha">
+            </div>
+            <div class="informacion-proyectos" id="informacion-etiquetado">
+                <div class="img"><img class="proyectos" src="https://via.placeholder.com/1000x425" alt="Manifestación"></div>
+                <p>Utilizamos diversas estrategias para que el proyecto de <strong>Promoción de la Alimentación Saludable</strong> sea ley:</p>
+                <ol>
+                    <li><strong>Trabajamos en coalición</strong> con diferentes organizaciones como Fundeps, FIC, Consumidores Argentinos, Museo del Hambre, FAGRAN, Sanar nutrición. Logramos llegar a  audiencias más amplias en las redes sociales y en el contacto con nuestros representantes.</li>
+                    <li>Activá el Congreso: en conjunto con Activa el Congreso y La Vuelta al Mundo trabajamos en la <strong>plataforma digital “Activá el Congreso”</strong> exigiendo a nuestros   representantes del Congreso de la Nación que sancionen la Ley de Etiquetado Frontal. Pueden visitarla en <a href="http://www.activaelcongreso.org/"><strong>activaelcongreso.org</strong></a>.</li>
+                    <li><strong>Azúcar Challenge</strong>: Fue una acción viral en Instagram, en conjunto con Somos Miles, para que éste tama llegara a más personas. El desafío consistía en tratar <strong>en 10 segundos comer 10 cucharadas de azúcar</strong>, por supuesto que en todo momento supimos que eso era imposible, y que en ese tiempo, como mucho se podían ingerir 2   cucharadas de azúcar. Gracias a este desafío más personas se enteraron de la situación e incluso, <strong>participaron y se involucraron en el reclamo</strong> a través de Activá el  Congreso.</li>
+                    <li>Convocamos a <strong>twittazos</strong> para que <strong>#EtiquetadoClaroYA</strong> sea tendencia.</li>
+                    <li>Generamos <strong>contenido audiovisual</strong> para informar y desmitificar argumentos erróneos sobre el proyecto en las redes sociales. Convocamos a personas mediáticas,     actores y actrices e influencers para participar de los mismos.</li>
+                    <li>Realizamos una <strong>acción en la vía pública</strong> en la que etiquetamos publicidades, lo que se utilizó como material para armar un video.</li>
+                    <li>Participamos de la <strong>tercera reunión informativa de la Cámara de Diputados de la Nación</strong> del día 23 de febrero de 2021 en la que expusimos acerca de la importancia de que la   ley de dictamine sin modificaciones.</li>
+                    <li><strong>Hablamos con diputados y diputadas de los distintos bloques</strong> de la importancia de que salga esta ley y sin modificaciones, y les pedimos que se comprometan a que así sea.</li>
+                </ol>
+            </div>
         </div>    
     </article>
     <article id="gestion-menstrual" class="gestion-menstrual">
         <div class="container">
-            <div class="img"><img class="proyectos" src="img/7.jpg" alt="Copita"></div>
-            <h3>Gestión menstrual:</h3>
-            <ol>
-                <li>Hablamos con diputados y diputadas de los distintos bloques de la importancia de que este proyecto se ponga en agenda política, y les pedimos que se comprometan a que así sea.</li>
-                <li>Armamos una red con diferentes organizaciones de la salud, generó, feministas y sociales.</li>
-                <li>Investigamos y analizamos los distintos proyectos presentados para hacer una comparativa de los mismos y determinar qué cosas negociamos y cuáles no.</li>
-            </ol>
+            <div class="titulos-proyectos" id="titulo-gestion">
+                <h3>Gestión menstrual</h3>
+                <img src="img/down-arrow.png" alt="Flecha">
+            </div>
+            <div class="informacion-proyectos" id="informacion-gestion">
+                <div class="img"><img class="proyectos" src="img/7.jpg" alt="Copita"></div>
+                <p>Utilizamos diversas estrategias para poner el la <strong>Gestión Menstrual Sostenible</strong> en agenda pública y política:</p>
+                <ol>
+                    <li><strong>Hablamos con diputados y diputadas de los distintos bloques</strong> de la importancia de que este proyecto se ponga en agenda política, y les pedimos que se comprometan a que así sea.</li>
+                    <li><strong>Armamos una red</strong> con diferentes organizaciones de la salud, generó, feministas y sociales.</li>
+                    <li><strong>Investigamos y analizamos los distintos proyectos</strong> presentados para hacer una comparativa de los mismos y determinar qué cosas negociamos y cuáles no.</li>
+                    <li>Generamos <strong>contenido</strong> con otras organizaciones por el <strong>Mes de la Salud Menstrual</strong>.</li>
+                </ol>
+            </div>
         </div>
     </article>
     <article id="accion-barrial">
         <div class="container">
-            <div class="img"><img class="proyectos" src="https://via.placeholder.com/1000x425" alt="Huerta"></div>
-            <h3>Acción Barrial:</h3>
-            <p>Estamos convencidxs que el trabajo territorial es fundamental para generar cambios. Es por eso que militamos la Soberanía Alimentaria en los barrios. En conjunto con lxs vecinxs de Fuerte Apache y Barrio Evita, construimos 5 huertas en distintos espacios del barrio donde antes habían canteros, basurales o tierras ociosas, para que puedan cosechar alimentos sanos y seguros, y utilizarse en los comedores para las ollas populares. Aprendemos en conjunto a plantar, cuidar y cosechar la huerta.</p>
+            <div class="titulos-proyectos" id="titulo-accion">
+                <h3>Acción barrial</h3>
+                <img src="img/down-arrow.png" alt="Flecha">
+            </div>
+            <div class="informacion-proyectos" id="informacion-accion">
+                <div class="img"><img class="proyectos" src="https://via.placeholder.com/1000x425" alt="Huerta"></div>
+                <p>Estamos convencidxs que el <strong>trabajo territorial</strong> es fundamental para <strong>generar</strong> verdaderas <strong>trasformaciones</strong>. Es por eso que <strong>militamos la Soberanía Alimentaria en los barrios</strong>. En conjunto con lxs vecinxs de Fuerte Apache y Barrio Evita, construimos 5 huertas en distintos espacios del barrio donde antes habían canteros, basurales o tierras ociosas, para que puedan cosechar alimentos sanos y seguros, y utilizarse en los comedores para las ollas populares. <strong>Aprendemos en conjunto</strong> a plantar, cuidar y cosechar la huerta.</p>
+            </div>
         </div>    
     </article>
-    <footer>
+    <footer class="footer-proyectos">
         <div class="container">
             <h6>¡Seguinos!</h6>
             <nav>
@@ -127,6 +144,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"  crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
+    <script src="js/main.js"></script>
     <script src="js/wow.min.js"></script>
     <script>
         new WOW().init();
