--- a/busquedas-laborales.html
+++ b/busquedas-laborales.html
@@ -57,7 +57,7 @@
                             </div>
                         </li>
                         <li class="nav-item pr-4">
-                            <a class="nav-link" href="busquedas-laborales.html">Búsquedas Laborales</a>
+                            <a class="nav-link" href="busquedas-laborales.html">Búsquedas voluntarias</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link boton" href="involucrate.html">Involucrate</a>
