Acomode los tama;os de las img de documentales

--- a/documentales.html
+++ b/documentales.html
@@ -172,8 +172,8 @@
                             <a href="https://www.youtube.com/watch?v=PwxCEKotnbg" target="_blank">Ver aquí</a>
                         </div>
                     </div>
-                    <div class="sin-foto"> <!-- id="documental15" class="documental15" -->
-                        <div> <!-- class="info-documental15" -->
+                    <div id="documental15" class="documental15"> 
+                        <div class="info-documental15">
                             <h4>Cowspiracy</h4>
                             <p>Explora el impacto de la ganadería en el ambiente e investiga las políticas de diferentes organizaciones ambientalistas al respecto. Se muestran los     problemas  relacionados con el consumo de carne en Estados Unidos y los problemas que genera en otras regiones del mundo. Hay ciertos argumentos y datos que son    cuestionables, pero no deja de ser interesante de ver la perspectiva que se aborda.</p>
                         </div>
@@ -232,15 +232,15 @@
                             <a href="https://www.youtube.com/watch?v=9nf-oer2TNw&feature=emb_title" target="_blank">Ver aquí</a>
                         </div>
                     </div>
-                    <div class="sin-foto">  <!-- id="documental23" class="documental23" -->
-                        <div>  <!-- class="info-documental23" -->
+                    <div id="documental23" class="documental23">   
+                        <div class="info-documental23">
                             <h4>Planeta en venta</h4>
                             <p>Este documental Francés, plasma la crisis que sufren las tierras fértiles a nivel mundial. La venta, compra y explotación llevada a un límite por grandes    corporaciones.</p>
                             <a href="https://ecoinventos.com/planeta-en-venta/" target="_blank">Ver aquí</a>
                         </div>
                     </div>
-                    <div class="sin-foto"> <!-- id="documental24" class="documental24" -->
-                        <div>  <!-- class="info-documental24" -->
+                    <div id="documental24" class="documental24"> 
+                        <div class="info-documental24"> 
                             <h4>Comprar, tirar, comprar</h4>
                             <p>Se define como una planificación del tiempo de vida de un producto, actualmente mucho menor al tiempo de vida que potencialmente podría tener. Es decir, las     cosas se programar para fallar y ser reemplazadas por el mismo producto o por una versión renovada. Esto sólo beneficia a los fabricantes, ya que obliga a los  consumidores a comprar reiteradas veces el mismo producto, generando a la vez residuos de distinto tipo, los que aumentan el problema mundial de la  contaminación.</p>
                             <a href="https://www.youtube.com/watch?v=j1exHcuitOA" target="_blank">Ver aquí</a>
@@ -267,8 +267,8 @@
                             <p>Diez años después de La verdad incómoda, Al Gore continúa su campaña para fomentar políticas que mitiguen los efectos del cambio climático y mostrar que aún     estamos a tiempo de revertir esta crisis.</p>
                         </div>
                     </div>
-                    <div class="sin-foto" > <!-- id="documental28" class="documental28" -->
-                        <div>  <!-- class="info-documental28" -->
+                    <div id="documental28" class="documental28"> 
+                        <div class="info-documental28">  
                             <h4>Ciudad 2030: Nuevas economías y cambio climático</h4>
                             <p>Este documental se pregunta cómo serán las Ciudades en el año 2030 y cómo deberá modificarse el modelo económico para que resulte acorde a la adaptación y   mitigación del Cambio Climático.</p>
                             <a href="https://www.youtube.com/watch?v=z4qJawymoCg" target="_blank">Ver aquí</a>
